[package]
name = "cstars"
version = "0.1.0"
edition = "2021"
authors = ["Lasse Haffke <lasse@haffke.me>"]

description = "Interact with Advent of Code from the command-line"
keywords = ["cli",  "aoc", "advent_of_code"]
categories = ["command-line-utilities"]

readme = "README.md"
repository = "https://github.com/lasse16/cstars"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members= [
"lib_cstars"
]

[dependencies]
lib_cstars = { version = "0.1.0", path = "lib_cstars" }
clap = { version = "3.1.6", features = ["cargo", "derive"] }
directories = { version ="4.0.0"}
