[package]
name = "lib_cstars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "cookies"] }
html_editor = { version = "0.3.0" }
log = { version = "0.4.16" }
