[package]
name = "lib_cstars"
version = "0.1.0"
edition = "2021"

authors = ["Lasse Haffke <lasse@haffke.me>"]

description = "Functions and shared content for interacting with the Advent Of Code Website"
keywords = ["cli", "advent of code", "aoc", "advent_of_code"]
categories = ["command-line-interface"]

readme = "README.md"
repository = "https://github.com/lasse16/cstars"
license = "GPL-3.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "cookies"] }
html_editor = { version = "0.5.1" }
secrecy = { version = "0.8.0" }
log = { version = "0.4.16" }
serde = { version = "^1.0.0" }
figment = { version = "^0.10.0", features = ["toml"] }
directories = { version = "^4.0.0" }
